[Finish] Journey of DUCAA

--- a/src/components/header/headerMenu/headerMenu.module.css
+++ b/src/components/header/headerMenu/headerMenu.module.css
@@ -1,7 +1,10 @@
 .navbar {
-  background: #eaeaea;
+  background: #fff;
   color: black;
   padding: 0;
+  box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
 }
 .topHeader {
   display: none;
