--- a/src/components/noticeCard/noticeCard.module.css
+++ b/src/components/noticeCard/noticeCard.module.css
@@ -1,5 +1,5 @@
 .cardDesign{
-    padding: 30px 25px;
+    padding: 15px 15px;
     text-align: center;
     margin-bottom: 40px;
     box-shadow: 0 0 45px rgba(0, 0, 0, .07);
@@ -27,5 +27,8 @@
     font-family: 'Noto Sans Bengali', sans-serif;
 }
 .button{
-    padding: 8px 20px;
+    background: rgb(255, 198, 0);
+    border: 1px solid rgb(255, 198, 0);
+    font-weight: bold;
+    padding: 4px 15px;
 }
