--- a/src/styles/gallery.module.css
+++ b/src/styles/gallery.module.css
@@ -1,10 +1,10 @@
 .gallery {
-  -webkit-column-count: 4;
-  -moz-column-count: 4;
-  column-count: 4;
-  -webkit-column-width:25%;
-  -moz-column-width: 25%;
-  column-width: 25%;
+  -webkit-column-count: 5;
+  -moz-column-count: 5;
+  column-count: 5;
+  -webkit-column-width:20%;
+  -moz-column-width: 20%;
+  column-width: 20%;
   padding: 0 12px;
 }
 
@@ -17,18 +17,23 @@
 .gallery .pics:hover{
     filter: opacity(.8);
 }
-@media (max-width: 991px) {
-  .gallery {
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
-  }
+.img{
+  width: 275px;
+  max-height: 155px;
+  min-height: 155px;
 }
-@media (max-width: 480px) {
+@media (max-width: 991px) {
   .gallery {
     -webkit-column-count: 2;
     -moz-column-count: 2;
     column-count: 2;
+  }
+}
+@media (max-width: 480px) {
+  .gallery {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
     -webkit-column-width: 50%;
     -moz-column-width: 50%;
     column-width: 50%;
