--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -81,11 +81,13 @@ a {
   display: inline-block;
   flex-direction: column;
   align-items: center;
+  margin: 15px 0 0px 0;
 }
 .headerTitle .headerTitleMain {
   position: relative;
   font-size: 26px;
   font-weight: 600;
+  margin-bottom: 0;
   text-align: center;
   color: transparent;
   -webkit-background-clip: text;
