--- a/src/components/home/presidentSecretery/presidentSecretery.module.css
+++ b/src/components/home/presidentSecretery/presidentSecretery.module.css
@@ -21,17 +21,21 @@
   justify-content: center;
 }
 .text1 {
-  font-size: 16px;
+  font-size: 15px;
   line-height: 1.7;
 }
 .title {
-  font-size: 32px;
+  font-size: 20px;
   font-weight: 700;
   color: #009cff;
   /* font-family: var(--font-family); */
 }
 .name {
-  font-size: 22px;
+  font-size: 16px;
   font-weight: 600;
   font-family: var(--font-family);
+}
+.workplace{
+  font-size: 15px;
+  font-weight: bold;
 }
