--- a/src/components/header/headerMenu/headerMenu.module.css
+++ b/src/components/header/headerMenu/headerMenu.module.css
@@ -5,6 +5,8 @@
   box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+  position: sticky;
+  top: 0;
 }
 .topHeader {
   display: none;
@@ -65,9 +67,20 @@
   color: black;
 }
 
-/* .customDropdown {
-  background-color: red;
-} */
+/* Application and login button */
+.headerTopButton{
+  font-size: 14px;
+  background: rgb(255, 198, 0);
+  color: black;
+  padding: 3px 10px;
+  border-radius: 5px;
+  border: 1px solid rgb(255, 198, 0);
+}
+.headerTopButton:hover{
+  background: rgb(223, 175, 1);
+  border: 1px solid rgb(223, 175, 1);
+}
+
 /* Add this CSS to your custom stylesheet or component */
 .customDropdown:hover .dropdown-menu {
   display: block !important; /* Set the dropdown menu to be visible on hover */
