--- a/src/components/header/headerTop/headerTop.module.css
+++ b/src/components/header/headerTop/headerTop.module.css
@@ -17,3 +17,16 @@
 .link{
     text-decoration: none;
 }
+
+.headerTopButton{
+    font-size: 14px;
+    background: rgb(255, 198, 0);
+    color: black;
+    padding: 3px 10px;
+    border-radius: 5px;
+    border: 1px solid rgb(255, 198, 0);
+}
+.headerTopButton:hover{
+    background: rgb(223, 175, 1);
+    border: 1px solid rgb(223, 175, 1);
+}
