--- a/src/components/dashboard/dashboardLeftSide/dashboardLeftSide.module.css
+++ b/src/components/dashboard/dashboardLeftSide/dashboardLeftSide.module.css
@@ -1,5 +1,5 @@
 .sidebar {
-  background: #000;
+  background: #fff;
   min-width: 250px;
   max-width: 250px;
   transition: all 0.3s;
@@ -12,27 +12,19 @@ hr.h-color {
   border: 1px solid #eee;
   background: #eee;
 }
-
-/* .sidebar li.active {
-  background: #eee;
-  border-radius: 8px;
-} */
-
-/* .sidebar li.active a,
-.sidebar li.active a:hover {
-  color: #fff;
-} */
 .sidebar li {
   margin-bottom: 3px;
 }
 .sidebar li a {
-  color: #fff;
+  color: #000;
 }
 .sidebar .link.active {
   background-color: rgb(255, 198, 0);
+  border-radius: 4px;
 }
 .link:hover {
-  background-color: rgb(255, 198, 0);
+  background-color: #ffe699;
+  border-radius: 4px;
 }
 
 @media (max-width: 767px) {
