Modify pagination button

--- a/src/components/pagination/pagination.module.css
+++ b/src/components/pagination/pagination.module.css
@@ -1,8 +1,9 @@
 .button{
-    color: #fff;
-    background: black;
+    color: black;
+    background: #D8DADF;
     padding: 5px 20px;
     border-radius: 10px;
+    border: 1px solid #D8DADF;
 }
 .page{
     margin-bottom: 0;
