--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,13 +1,13 @@
 .footer {
     background-color: #000000;
-    color: #777;
+    color: #a7a5af;
     padding: 60px 0;
   }
   .title {
     font-size: 22px;
     font-weight: 600;
     margin-bottom: 20px;
-    color: #cfb7b7;
+    color: #f4f4f4;
   }
   .footerItems {
     list-style-type: none;
@@ -17,7 +17,7 @@
     font-size: 20px;
   }
   .footerLink {
-    color: #777;
+    color: #a7a5af;
     text-decoration: none;
   }
   .footerLink:hover span {
@@ -29,7 +29,7 @@
   .footerSocialIcon {
     width: 40px;
     height: 40px;
-    border: 1px solid #777;
+    border: 1px solid #a7a5af;
     display: flex;
     justify-content: center;
     align-items: center;
