--- a/src/components/home/presidentSecretery/presidentSecretery.module.css
+++ b/src/components/home/presidentSecretery/presidentSecretery.module.css
@@ -1,17 +1,25 @@
-.presidentSecretery {
-  /* margin-bottom: 70px; */
-}
+/* .presidentSecretery { */
+/* margin-bottom: 70px; */
+/* } */
 .col {
   display: flex;
   align-items: center;
 }
 .imgContent {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  background: white;
+  padding: 30px 40px;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.75);
 }
 .img {
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
   object-fit: fill;
 }
@@ -19,6 +27,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background: white;
+  padding: 30px 40px;
+  box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.75);
 }
 .text1 {
   font-size: 15px;
@@ -31,11 +44,26 @@
   /* font-family: var(--font-family); */
 }
 .name {
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 600;
   font-family: var(--font-family);
+  color: #002147;
 }
-.workplace{
-  font-size: 15px;
-  font-weight: bold;
+.workplace {
+  font-size: 14px;
+  font-weight: 600;
+}
+.button {
+  width: 140px;
+  height: 32px;
+  border-radius: 20px;
+  background-color: transparent;
+  color: #002147;
+  border: 2px solid #002147;
+}
+.button:hover {
+  background-color: #002147;
+  color: #ffffff !important;
+  border: 2px solid #002147;
+  transition: 0.3s;
 }
