--- a/src/components/home/carouselBanner/carouselBanner.module.css
+++ b/src/components/home/carouselBanner/carouselBanner.module.css
@@ -13,6 +13,14 @@
     width: 100vw;
     height: 400px;
   }
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); 
+  }
   
   @media (max-width: 768px) {
     /* Styles for small devices */
