--- a/src/components/home/homeNotice/homeNotice.module.css
+++ b/src/components/home/homeNotice/homeNotice.module.css
@@ -1,34 +1,45 @@
-.cardDesign{
-    padding: 15px 15px;
-    text-align: center;
-    margin-bottom: 40px;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .07);
-    min-height: 400px;
-    border-radius: 20px;
+.cardDesign {
+  padding: 15px 15px;
+  text-align: center;
+  margin-bottom: 40px;
+  box-shadow: 0 0 45px rgba(0, 0, 0, 0.07);
+  min-height: 400px;
+  border-radius: 20px;
 }
-.cardImg{
-    max-height: 210px;
-    width: 100%;
+.cardImg {
+  max-height: 210px;
+  width: 100%;
 }
-.date{
-    text-align: left;
-    padding: 10px 0;
-    background: #FAFAFA;
-    display: flex;
-    align-items: center;
-    padding-left: 10px;
-    margin-bottom: 10px;
+.date {
+  text-align: left;
+  padding: 10px 0;
+  background: #fafafa;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  margin-bottom: 10px;
 }
-.title{
-    font-size: 16px;
-    font-weight: 600;
-    margin-bottom: 10px;
-    line-height: 1.4;
-    font-family: 'Noto Sans Bengali', sans-serif;
+.title {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  line-height: 1.4;
+  font-family: "Noto Sans Bengali", sans-serif;
 }
-.button{
-    background: rgb(255, 198, 0);
-    border: 1px solid rgb(255, 198, 0);
-    font-weight: bold;
-    padding: 4px 15px;
+.button {
+  width: 140px;
+  height: 32px;
+  border-radius: 20px;
+  background-color: transparent;
+  color: #002147;
+  border: 2px solid #002147;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.button:hover {
+  background-color: #002147;
+  color: #ffffff !important;
+  border: 2px solid #002147;
+  transition: 0.3s;
 }
