--- a/src/components/header/headerMenu/headerMenu.module.css
+++ b/src/components/header/headerMenu/headerMenu.module.css
@@ -136,4 +136,13 @@
 /* Add this CSS to your custom stylesheet or component */
 .customDropdown:hover .dropdown-menu {
   display: block !important; /* Set the dropdown menu to be visible on hover */
+  opacity: 1; /* Make the dropdown menu fully visible */
+  visibility: visible; /* Ensure the dropdown menu is visible */
+  transition: opacity 0.3s ease-in-out;
 }
+/* .customDropdown .dropdown-menu {
+  display: none; 
+  opacity: 0; 
+  visibility: hidden; 
+  transition: opacity 0.3s ease-in-out; 
+} */
